[package]
name = "pubsub_bigquery"
version = "0.1.0"
authors = ["zwennesm <zwennesm@protonmail.com>"]
edition = "2018"

[dependencies]
log = "0.4.6"
config = "0.9.2"
simple_logger = "1.0.1"
base64 = "0.10.1"
uuid = { version = "0.7.2", features = ["v4"] }

hyper = "0.12.25"
hyper-tls = "0.3.1"
google-pubsub1_beta2 = "1.0.8+20181001"
google-bigquery2 = "1.0.8+20181001"
yup-oauth2 = "1.0.11"

serde = "1.0"
serde_derive = "1.0"